# CapCruncher

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.txt  capcruncher_pipeline_alpha_test.html  capcruncher_pipeline_alpha_test.qmd  capturec_conda_env.yml  capturec_pipeline.py  capturec_pipeline.yml  capturec_pipeline_example.yml  ccanalyser.py  ccanalyser_conda_env.yml  ccanalyser_dev.py  changelog.txt  codecov.yml  conda.yml  config.yml  conftest.py  deduplicate_fastq.py  digest_fastq.py  digest_fastq_dev.py  digest_genome.py  digest_pe_fastq.py  environment.yml  index.html  join_tsv.py  make_track_hub.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.cfg  (+4 more)
.github/workflows/: CD.yml  CI.yml  capcruncher-ci.yml  docs.yml  publish-to-test-pypi.yml  python-template.yml  upload.yml
capcruncher/: __init__.py  utils.py  visualise_statistics.ipynb
capcruncher/api/: __init__.py  annotate.py  count.py  deduplicate.py  digest.py  filter.py  io.py  pileup.py  plotting.py  statistics.py  storage.py
capcruncher/cli/: __init__.py  alignments_annotate.py  alignments_deduplicate.py  alignments_filter.py  cli_alignments.py  cli_fastq.py  cli_genome.py  cli_interactions.py  cli_pipeline.py  cli_plot.py  cli_reporters.py  cli_utilities.py  fastq_deduplicate.py  fastq_digest.py  fastq_split.py  genome_digest.py  interaction_count.py  interactions_compare.py  interactions_count.py  interactions_deduplicate.py  interactions_differential.py  interactions_pileup.py  interactions_store.py  plot.py  reporters_compare.py  reporters_count.py  reporters_deduplicate.py  reporters_differential.py  reporters_heatmap.py  reporters_pileup.py  reporters_plot.py  reporters_store.py
capcruncher/data/: logo.txt
capcruncher/pipeline/: Snakefile  make_report.py  pipeline.py  report_text.yml  snakefile  statistics.ipynb  utils.py
capcruncher/tests/: test_annotate.py  test_cli.py  test_deduplication.py  test_digest.py  test_io.py  test_pileup.py  test_pipeline.py  test_slice_filtering.py  test_storage.py  test_utils.py
capcruncher/tools/: annotate.py  count.py  deduplicate.py  digest.py  filter.py  io.py  pileup.py  plotting.py  statistics.py  storage.py
capturec/: aggregate_statistics.py  capturec_pipeline.py  ccanalyser.py  cli.py  convert_tsv_to_bedgraph.py  deduplicate_fastq.py  deduplicate_fastq_dev.py  digest_fastq.py  digest_fastq_dev.py  digest_genome.py  get_example_yaml.py  join_tsv.py  split_fastq.py  test_run_params.py  validate_annotations.py  visualise_capture-c_stats.ipynb
capturec/data/: test_duplicates_miseq_1.fastq
ccanalyser/: __init__.py  ccanalyser_cli.py  pipeline_cli.py  utils.py  visualise_capture-c_stats.ipynb  visualise_statistics.ipynb
ccanalyser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ccanalyser/ccanalysis/: __init__.py  aggregate_and_remove_duplicates.py  annotate_slices.py  bedgraph.py  ccanalyser.py  ccanalysis.py  convert_tsv_to_bedgraph.py  count_interactions.py  count_restriction_fragment_combinations.py  generate_annotations.py  generate_bedgraph.py  plot_interactions.py  plot_matrix.py  plot_rf_counts.py  remove_duplicate_slices.py  remove_duplicates.py  slices_to_bedgraph.py  storage.py  store_interactions.py  store_rf_counts.py
ccanalyser/cli/: __init__.py  _fastq.py  _genome.py  _interactions.py  _reporters.py  alignments_annotate.py  alignments_deduplicate.py  alignments_filter.py  cli_alignments.py  cli_fastq.py  cli_genome.py  cli_reporters.py  fastq_deduplicate.py  fastq_digest.py  fastq_split.py  genome_digest.py  interactions_bedgraph.py  interactions_count.py  interactions_differential.py  interactions_plot.py  interactions_store.py  pipeline_cli.py  reporters_annotate.py  reporters_bedgraph.py  reporters_count.py  reporters_deduplicate.py  reporters_differential.py  reporters_heatmap.py  reporters_identify.py  reporters_pileup.py  reporters_store.py  slices_annotate.py
ccanalyser/data/: test_data_contents.txt  test_digestion_miseq_1.fastq  test_duplicates_miseq_1.fastq  test_duplicates_miseq_2.fastq
ccanalyser/pipeline/: capturec_pipeline.py  get_yaml.py  pipeline.py  test_run_params.py  validate_annotations.py
ccanalyser/stats/: aggregate_statistics.py  visualise_capture-c_stats.ipynb
ccanalyser/tests/: test_annotate.py  test_cli.py  test_deduplication.py  test_digest.py  test_fastq_digest_flashed.fastq  test_fastq_digest_pe.fastq  test_io.py  test_pipeline.py  test_slice_filtering.py  test_storage.py  test_utils.py
ccanalyser/tools/: annotate.py  deduplicate.py  digest.py  filter.py  io.py  pileup.py  statistics.py  storage.py
ccanalyser/utils/: aggregate_tsv.py  aggregate_tsv_dev.py  convert_to_mo_rf_counts.py  deduplicate_fastq.py  digest_fastq.py  digest_fastq_dev.py  digest_genome.py  helpers.py  io.py  join_tsv.py  split_fastq.py  tools.py
cli/: index.html
cluster_config/: index.html
doc/: ccanalyser.rst  conf.py  index.rst  installing.rst  make_cli_rst.py  running_the_pipeline.rst
docs/: cli.md  cli.rst  cluster_config.md  conf.py  faq_pipeline.rst  gen_ref_pages.py  glossary.rst  index.md  index.rst  installation.md  installing.rst  pipeline.md  plotting.ipynb  requirements.txt  running_the_pipeline.rst  tips.md
examples/: capcruncher_config.yml
gen_ref_pages/: index.html
installation/: index.html
pipeline/: index.html
plotting/: index.html
search/: search_index.json
src/: aggregate_statistics.py  capturec_pipeline.py  ccanalyser.py  count_fragments.rs  deduplicate_fastq.py  deduplicate_fastq_dev.py  digest_fastq.py  fastq_deduplication.rs  lib.rs  main.rs  reporters_count.rs  split_fastq.py  utils.rs  visualise_capture-c_stats.ipynb
test/: Untitled Document 1
tests/: test_annotate.py  test_cli.py  test_counting.py  test_deduplication.py  test_digest.py  test_io.py  test_pileup.py  test_pipeline.py  test_pipeline_smk.py  test_plotting.py  test_slice_filtering.py  test_utils.py
tips/: index.html
usage/: index.html
(+240 files in other folders)
