[package]
name = "libcapcruncher"
version = "0.1.0"
authors = ["asmith <alastair.smith@ndcls.ox.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcapcruncher"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies]
bio = "0.34"
twox-hash = "1.6.0"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
flate2 = "1.0.20"
ctrlc = "3.1.9"
indicatif = "0.16.2"
bincode = "1.3.3"
csv = "1.1.6"
rayon = "1.5.1"
threadpool = "1.8.1"
human-panic = "1.0.3"
log = "0.4.14"

[profile.release]
debug = 1
