[package]
authors = ["asmith <alastair.smith@ndcls.ox.ac.uk>"]
edition = "2018"
name = "libcapcruncher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "libcapcruncher"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.14.1"

[dependencies]
bincode = "1.3.3"
bio = "0.34"
csv = "1.1.6"
ctrlc = "3.1.9"
flate2 = "1.0.20"
human-panic = "1.0.3"
indicatif = "0.16.2"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
serde = {version = "1.0", features = ["derive"]}
pyo3-log = "0.4.0"
threadpool = "1.8.1"
twox-hash = "1.6.0"

[profile.release]
debug = 1
