[metadata]
name = capcruncher
version = 0.2.4a2
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = An end-to-end solution for processing Capture-C, Tri-C and Tiled-C data
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/sims-lab/CapCruncher.git
classifiers = 
        Environment :: Console
        Intended Audience :: Science/Research
        Operating System :: POSIX :: Linux
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Topic :: Scientific/Engineering :: Bio-Informatics
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: Implementation :: CPython


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires= file:
        requirements.txt

python_requires = >= 3.8

[options.entry_points]
console_scripts = capcruncher = capcruncher.cli:cli

[options.extras_require]
stats = diffxpy
plotting = coolbox

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests/

[options.package_data]
* = *.yml

